# rrun

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
img/: rrun_icon.psd
src/: cli.rs  command_service.rs  commands.rs  config.rs  fzf.rs  invocations.rs  long_term_memory.rs  main.rs  notification.rs  persistent.rs  terminals.rs  util.rs
src/ipc/: hyprland.rs  i3wm.rs  mod.rs
