[package]
name = "rrun"
version = "1.0.0"
description = "A CLI application launcher for i3wm and sway written in Rust."
authors = ["Florian Straubinger <github@f-str.de>"]
repository = "https://github.com/f-str/rrun"
homepage = "https://github.com/f-str/rrun"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["cli", "launcher", "i3", "application-launcher"]
categories = ["command-line-utilities"]
edition = "2021"

[package.metadata.aur]
optdepends = ["ripgrep", "fzf"]


[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
