[package]
name = "rrun"
version = "1.0.0"
description = "A CLI application and command launcher written in Rust. Supports I3wm, Sway, and Hyprland."
authors = ["Florian Straubinger <github@f-str.de>"]
repository = "https://github.com/f-str/rrun"
homepage = "https://github.com/f-str/rrun"
readme = "README.md"
license-file = "LICENSE"
license="MIT"
keywords = ["cli", "launcher", "i3", "application-launcher"]
categories = ["command-line-utilities"]
edition = "2021"

[package.metadata.aur]
optdepends = ["ripgrep", "fzf"]


[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
fzf-wrapped = "0.1.4"
dialoguer = { version = "0.12.0", features = ["editor", "fuzzy-select", "history", "completion", "password"] }
console = "0.16.1"
whoami = "1.6.1"
